fix vertical lines

--- a/days/w1d5/w1d5_sol.ipynb
+++ b/days/w1d5/w1d5_sol.ipynb
@@ -112,7 +112,7 @@
     "        super().__init__()\n",
     "        self.freq = nn.Parameter(torch.randn(1, 3, 224, 113, 2))\n",
     "        H, W = self.freq.shape[2:4]\n",
-    "        freq_magnitude = (torch.fft.fftfreq(H)[:,None]**2 + torch.fft.fftfreq(W)**2).sqrt()\n",
+    "        freq_magnitude = (torch.fft.fftfreq(H)[:,None]**2 + torch.fft.fftfreq(H)[:W]**2).sqrt()\n",
     "        freq_magnitude[0, 0] = 1/H\n",
     "        self.register_buffer('freq_magnitude', freq_magnitude)\n",
     "        if learnable_scale:\n",
@@ -134,7 +134,7 @@
     "        super().__init__()\n",
     "        self.freq = nn.Parameter(torch.randn(1, 3, 224, 113, 2))\n",
     "        H, W = self.freq.shape[2:4]\n",
-    "        freq_magnitude = (torch.fft.fftfreq(H)[:,None]**2 + torch.fft.fftfreq(W)**2).sqrt()\n",
+    "        freq_magnitude = (torch.fft.fftfreq(H)[:,None]**2 + torch.fft.fftfreq(H)[:W]**2).sqrt()\n",
     "        freq_magnitude[0, 0] = 1/H\n",
     "        self.register_buffer('freq_magnitude', freq_magnitude)\n",
     "        self.scale = scale\n",
