--- a/days/w1d1/renderer_template.ipynb
+++ b/days/w1d1/renderer_template.ipynb
@@ -466,9 +466,8 @@
     "(O - A)\n",
     "\\end{pmatrix}\n",
     "\\Rightarrow\n",
-    "\\end{gather*}\n",
-    "\\newline\n",
-    "\\begin{gather*}\n",
+    "\\end{gather*}\n$$",
+    "$$\\begin{gather*}\n",
     "\\Rightarrow\n",
     "\\begin{pmatrix}\n",
     "-D_x & (B - A)_x & (C - A)_x \\\\\n",
